NP-17556-scrape-when-error, code review